--- a/content/posts/卡片笔记.md
+++ b/content/posts/卡片笔记.md
@@ -52,3 +52,36 @@ graph TD
     B --> D["❗ 注意事项"]
 
 ```
+
+---
+
+> 读书笔记卡片
+
+
+```mermaid
+graph TD
+    A[故事情节名称] --> B[书籍名称]
+    A --> C[作者]
+    A --> D[主要人物]
+    A --> E[关键情节概述]
+    E --> E1[事件1]
+    E --> E2[事件2]
+    E --> E3[事件3]
+    A --> F[背后的主题或意义]
+    F --> F1[主题1]
+```
+
+
+```mermaid
+
+graph TD
+    A[概念名称] --> B[书籍名称]
+    A --> C[页码]
+    A --> D[概念定义]
+    A --> E[书中引用或例子]
+    E --> E1[引用1]
+    E --> E2[引用2]
+    A --> F[自己的理解或感想]
+    F --> F1[感想1]
+
+```
