--- a/content/posts/卡片笔记.md
+++ b/content/posts/卡片笔记.md
@@ -10,15 +10,14 @@ draft = false
 
  
 
-```mermaid
+{{< mermaid >}}
 graph TD
     A[卡片标题] --> B1[左侧内容1]
     A --> B2[右侧内容1]
     B1 --> C1[左侧内容2]
     B2 --> C2[右侧内容2]
     C1 --> D1[左侧内容3]
-    C2 --> D2[右侧内容3]
-```
+{{< /mermaid >}}
 
 
 ```mermaid
